# gitv

./: .gitignore  CHANGELOG.md  Cargo.toml  KEYBINDS.md  README.md  flake.nix  package.nix  shell.nix
.github/workflows/: cd.yml  rust.yml  typos.yml
crates/hyperrat/: Cargo.toml  README.md
crates/hyperrat/src/: lib.rs
crates/ratatui-toaster/: CHANGELOG.md  Cargo.toml  README.md
crates/ratatui-toaster/examples/: simple.rs
crates/ratatui-toaster/src/: engine.rs  lib.rs  widget.rs
etc/: pre-push.sh
src/: errors.rs  lib.rs  logging.rs
src/app/: cli.rs  mod.rs
src/bookmarks/: mod.rs
src/ui/: layout.rs  mod.rs
src/ui/components/: help.rs  issue_conversation.rs  issue_create.rs  issue_detail.rs  issue_list.rs  label_list.rs  mod.rs  search_bar.rs  status_bar.rs
src/ui/components/toast/: types.rs
