[package]
name = "issue_me"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.89"
clap = { version = "4.5.57", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
futures = "0.3.31"
inquire = "0.9.3"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native"] }
octocrab = "0.49.5"
pulldown-cmark = "0.11.3"
rat-cursor = "2.0.0"
rat-widget = "3.1.1"
ratatui = "0.30.0"
ratatui-macros = "0.7.0"
termprofile = { version = "0.2.0", features = ["convert", "ratatui"] }
textwrap = { version = "0.16.2", features = ["terminal_size"] }
thiserror = "2.0.18"
throbber-widgets-tui = "0.10.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = "fat" # Enables Link-time Optimization.
opt-level = "z" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.
