[package]
name = "gitv-tui"
version = "0.3.2"
edition = "2024"
build = "build.rs"
description = "A terminal-based GitHub client built with Rust and Ratatui."
authors = ["JayanAXHF <sunil.chdry@gmail.com>"]
license = "Unlicense OR MIT"
homepage = "https://github.com/jayanaxhf/gitv"
repository = "https://github.com/jayanaxhf/gitv"
readme = "README.md"
keywords = ["tui", "cli", "github", "prodcutivity", "ratatui"]
categories = ["command-line-utilities", "command-line-interface"]

[workspace]
members = ["crates/hyperrat", "crates/ratatui-toaster"]

[features]
default = ["keyring/linux-native"]
persist-token = ["keyring/sync-secret-service"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1.89"
clap = { version = "4.5.57", features = ["derive", "cargo", "string"] }
clap_mangen = "0.2.28"
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
edit = "0.1.5"
futures = "0.3.31"
hyperrat = { path = "crates/hyperrat", version = "0.1.1" }
inquire = "0.9.3"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native"] }
octocrab = "0.49.5"
pulldown-cmark = "0.13.0"
regex = "1.11.1"
rat-cursor = "2.0.0"
rat-widget = "3.1.1"
ratatui = {version = "0.30.0", features = ["unstable-widget-ref"] }
ratatui-macros = "0.7.0"
ratatui-toaster = { path = "crates/ratatui-toaster", version = "0.1.1", features = ["tokio"] }
termprofile = { version = "0.2.0", features = ["convert", "ratatui"] }
textwrap = { version = "0.16.2", features = ["terminal_size"] }
thiserror = "2.0.18"
throbber-widgets-tui = "0.11.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
syntect = { version = "5.3.0", default-features = false, features = ["parsing", "default-syntaxes", "default-themes", "regex-fancy"] }
cli-clipboard = "0.4.0"
tachyonfx = { version = "0.24.0", default-features = false, features = ["std", "std-duration"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = "fat" # Enables Link-time Optimization.
opt-level = "z" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.


[build-dependencies]
anyhow = "1.0.101"
vergen-gix = { version = "9.1.0", features = ["build", "cargo"] }
